Add api and auth
